src/main/java/com/example/corebank/common/error/InvalidAmountException.java
package com.example.corebank.common.error;

public class InvalidAmountException extends RuntimeException {
    public InvalidAmountException(String message) {
        super(message);
    }
}
